Fixed issue: On smaller screens (mobile), when clicking on the search field in the navbar collapse, it closes before user can search. Also, I fixed some CSS styling issues.

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
 }
 
 .pageBody {
-  background: #faf6ff
+  background: #faf6ff;
+  padding-top: 30px;
 }
 
 .App {
